# wivrn-macos

./: .gitignore  README.md
.github/workflows/: macos-build.yml
desktop/tauri-app/: index.html  package.json  pnpm-lock.yaml
desktop/tauri-app/src/: main.ts  style.css
desktop/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/tauri-app/src-tauri/capabilities/: default.json
desktop/tauri-app/src-tauri/src/: main.rs
docs/: tauri-packaging-plan.md
examples/openxr-metal-frame-probe/src/: openxr_metal_frame_probe.m
examples/openxr-runtime-probe/: openxr_runtime_probe.c
scripts/: bootstrap_sources.sh  build_macos_headless.sh  build_openxr_loader.sh  build_openxr_probes.sh  make_signed_pkg.sh  package_macos_app.sh  prepare_tauri_sidecars.sh
scripts/pkg/: postinstall
